fix date input alignment issue

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -308,6 +308,7 @@ h5 {
 	margin:0 0 20px 0;
 	position: relative;
 	cursor: pointer;
+	padding-right: 34px;
 }
 h5.title {
 	margin-bottom: 0;
@@ -459,6 +460,8 @@ input.dob-input {
     font-family: 'Roboto', sans-serif;
     text-transform: uppercase !important;
 	display: block;
+	line-height: 60px;
+	padding: 15px 10px;
 }
 
 .marital-input,
